tests/error/comptime/pointer_difference19.bz
// error: invalid pointer difference operation with type '*i32'
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to an element outside its lifetime in this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc([i32, i32], 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, [i32, i32]());

		let lhs = &(*p)[0] + 1;
		let rhs = &(*p)[0];
		__builtin_destruct_value(*p);

		lhs - rhs;
	});
}
